--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -1,63 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="title_taken">Et notat med det navnet finnes allerede</string>
-    <string name="delete_note">Slett notat</string>
+    <string name="app_name">Enkle notater</string>
+    <string name="app_launcher_name">Notater</string>
+    <string name="widget_config">Takk for at du bruker Enkle notater\nFlere enkle programmer er å finne på SimpleMobileTools.com</string>
+    <string name="cannot_share_empty_text">Kan ikke dele tom tekst</string>
     <string name="simple_note">Enkelt notat</string>
     <string name="new_note">Legg til nytt notat</string>
+    <string name="no_title">Gi ditt notat et navn</string>
+    <string name="title_taken">Et notat med det navnet finnes allerede</string>
     <string name="open_note">Åpne notat</string>
+    <string name="delete_note">Slett notat</string>
+    <string name="delete_note_prompt_message">Slett «%s»-notatet\?</string>
+    <string name="pick_a_note">Velg et notat</string>
     <string name="rename_note">Gi notatet nytt navn</string>
     <string name="general_note">Generelt notat</string>
     <string name="create_new_note">Opprett et nytt notat</string>
     <string name="add_to_note">Legg til i notat</string>
     <string name="unsaved_changes_warning">Du har ulagrede endringer. Hva vil du gjøre med dem\?</string>
-    <string name="new_note_type">Ny notattype:</string>
-    <string name="show_content">Vis innhold</string>
-    <string name="open_file">Åpne fil</string>
-    <string name="export_as_file">Eksporter som fil</string>
-    <string name="widget_config">Takk for at du bruker Enkle notater
-\nFlere enkle programmer er å finne på SimpleMobileTools.com</string>
-    <string name="cannot_share_empty_text">Kan ikke dele tom tekst</string>
-    <string name="pick_a_note">Velg et notat</string>
     <string name="note_shown_widget">Notat vist i miniprogrammet:</string>
     <string name="show_note_title">Vis notattittel</string>
-    <string name="note_content_locked">Notatinnholdet er låst.</string>
-    <string name="checklist">Sjekkliste</string>
-    <string name="checklists">Sjekklister</string>
-    <string name="add_new_checklist_items">Legg til nye sjekklisteelementer</string>
-    <string name="export_all_notes">Eksporter alle notater som filer</string>
-    <string name="import_notes">Importer flere filer som notater</string>
-    <string name="import_folder">Importer mappe</string>
-    <string name="faq_1_title">Hvordan endrer jeg miniprogramsfargen\?</string>
-    <string name="app_short_description">Enkel planlegger: Opprett notater, sikkerhetskopi- og gjøremålslister med et enkelt påminnelsesverktøy</string>
-    <string name="left">Venstre</string>
-    <string name="center">Sentrert</string>
-    <string name="app_name">Enkle notater</string>
-    <string name="app_launcher_name">Notater</string>
-    <string name="no_title">Gi ditt notat et navn</string>
-    <string name="delete_note_prompt_message">Slett «%s»-notatet\?</string>
-    <string name="remove_done_items">Fjern utførte elementer</string>
-    <string name="right">Høyre</string>
-    <string name="add_new_checklist_item">Legg til nytt sjekklisteelement</string>
+    <string name="new_note_type">Ny notattype:</string>
     <string name="text_note">Tekstnotat</string>
     <string name="lock_note">Lås notat</string>
     <string name="unlock_note">Lås opp notat</string>
-    <string name="widget_note">Notat brukt i miniprogram</string>
-    <string name="checklist_is_empty">Sjekklisten er tom</string>
+    <string name="note_content_locked">Notatinnholdet er låst.</string>
+    <string name="show_content">Vis innhold</string>
+    <string name="locking_warning">Advarsel: Hvis du glemmer notatpassordet vil du ikke kunne gjenopprette det eller innholdet.</string>
+    <!-- File notes -->    
+    <string name="open_file">Åpne fil</string>
+    <string name="export_as_file">Eksporter som fil</string>
+    <string name="file_too_large">Filen er er større enn grensen på 1 MB</string>
+    <string name="only_import_file_content">Kun importer filinnholdet\n(endringen av filen vil ikke ha innvirkning på notatet)</string>
+    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
+    <string name="delete_file_itself">Also delete file \"%s\"</string>
+    <string name="note_saved_successfully">Note \"%s\" saved successfully</string>
     <string name="note_exported_successfully">Eksporterte «%s»-notatet</string>
-    <string name="only_import_file_content">Kun importer filinnholdet
-\n(endringen av filen vil ikke ha innvirkning på notatet)</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
+    <!-- Settings -->
+    <string name="display_success_message">Display save success messages</string>
     <string name="links_and_emails_clickable">Gjør lenker og e-poster klikkbare</string>
     <string name="place_cursor_end">Plasser pekeren på slutten av notatet</string>
     <string name="monospaced_font">Bruk fastbreddeskrift</string>
     <string name="show_keyboard">Vis tastatur ved programstart</string>
-    <string name="locking_warning">Advarsel: Hvis du glemmer notatpassordet vil du ikke kunne gjenopprette det eller innholdet.</string>
-    <string name="file_too_large">Filen er er større enn grensen på 1 MB</string>
-    <string name="add_new_checklist_items_top">Legg til nye sjekklisteelementer på toppen</string>
-    <string name="move_done_checklist_items">Flytt utførte sjekklisteelementer til bunnen</string>
     <string name="show_word_count">Vis antall ord</string>
     <string name="show_character_count">Vis antall tegn</string>
     <string name="alignment">Justering</string>
-    <string name="enable_line_wrap">Skru på linjebryting</string>
-    <string name="autosave_notes">Lagre notater automatisk</string>
+    <string name="left">Venstre</string>
+    <string name="center">Sentrert</string>
+    <string name="right">Høyre</string>
+    <string name="widget_note">Notat brukt i miniprogram</string>
     <string name="show_note_picker">Vis en notatvelger ved programstart</string>
+    <string name="autosave_notes">Lagre notater automatisk</string>
+    <string name="enable_line_wrap">Skru på linjebryting</string>
+    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
+    <string name="move_done_checklist_items">Flytt utførte sjekklisteelementer til bunnen</string>
+    <string name="add_new_checklist_items_top">Legg til nye sjekklisteelementer på toppen</string>
+    <!-- Checklists -->
+    <string name="checklist">Sjekkliste</string>
+    <string name="checklists">Sjekklister</string>
+    <string name="add_new_checklist_item">Legg til nytt sjekklisteelement</string>
+    <string name="add_new_checklist_items">Legg til nye sjekklisteelementer</string>
+    <string name="checklist_is_empty">Sjekklisten er tom</string>
+    <string name="remove_done_items">Fjern utførte elementer</string>
+    <!-- Import / Export -->    
+    <string name="export_all_notes">Eksporter alle notater som filer</string>
+    <string name="import_notes">Importer flere filer som notater</string>
+    <string name="import_folder">Importer mappe</string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Hvordan endrer jeg miniprogramsfargen\?</string>
+    <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
+    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
+    <string name="app_title">Simple Notes Pro: To-do list organizer and planner</string>
+    <!-- Short description has to have less than 80 chars -->
+    <string name="app_short_description">Enkel planlegger: Opprett notater, sikkerhetskopi- og gjøremålslister med et enkelt påminnelsesverktøy</string>
+    <string name="app_long_description">
+        ★ Need to take a quick note of something to buy, an address, or a startup idea? Then look no further as this is the simple organizer tool you\'ve been looking for : Simple Notes: To-do list organizer and planner! No complicated setup steps needed, just tap the screen and type in what you came for and create notes, quick lists, checklist or backup for any idea. With your simple personal notebook you can remember anything fast! Shopping for groceries, memorizing your thoughts and easier setting up reminders taking notes has never been easier ★
+
+        Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information!
+
+        Our reminder tool allows you to keep track of your duties,create daily checklist for items or ideas with unprecedented simplicity, notability and unrivaled time-saving value. Manage your schedule in a quick and simple manner.
+
+        This notebook reminder tool comes with autosave so you will not discard your changes by mistake. It also supports creating multiple independent plain text notes and lists very fast.
+
+        You can easily access the note and organize your to-do list in no time by using the customizable and resizable widget, which opens the app on tap.
+
+        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking.
+
+        <b>Simple Notes: To-do list organizer and planner </b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :).
+
+        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+
+        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.
+
+        <b>Check out the full suite of Simple Tools here:</b>
+        https://www.simplemobiletools.com
+
+        <b>Standalone website of Simple Notes Pro:</b>
+        https://www.simplemobiletools.com/notes
+
+        <b>Facebook:</b>
+        https://www.facebook.com/simplemobiletools
+
+        <b>Reddit:</b>
+        https://www.reddit.com/r/SimpleMobileTools
+    </string>
+
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
