--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,6 +25,8 @@
     <string name="note_content_locked">El contenido de esta nota está bloqueado.</string>
     <string name="show_content">Mostrar contenido</string>
     <string name="locking_warning">ADVERTENCIA: Si olvidas la contraseña de esta nota, ya no podrás recuperar su contenido.</string>
+    <string name="new_text_note">New text note</string>
+    <string name="new_checklist">New checklist</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir archivo</string>
