--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -69,8 +69,9 @@
 
     <!-- Import / Export -->
     <string name="export_all_notes">Eksporter alle noter som filer</string>
-    <string name="import_notes">Importer flere filer som noter</string>
     <string name="import_folder">Importer mappe</string>
+    <string name="export_notes">Export notes</string>
+    <string name="import_notes">Import notes</string>
 
     <!-- FAQ -->
     <string name="faq_1_title">How can I change the widgets color?</string>
