--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -69,8 +69,9 @@
 
     <!-- Import / Export -->
     <string name="export_all_notes">Eksportuoti visus užrašus kaip bylas</string>
-    <string name="import_notes">Importuoti keletą bylų, kaip užrašus</string>
     <string name="import_folder">Importuoti aplanką</string>
+    <string name="export_notes">Export notes</string>
+    <string name="import_notes">Import notes</string>
 
     <!-- FAQ -->
     <string name="faq_1_title">How can I change the widgets color?</string>
