--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -66,8 +66,9 @@
     <string name="remove_done_items">Remover itens concluídos</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como arquivo</string>
-    <string name="import_notes">Importar múltiplos arquivos como notas</string>
     <string name="import_folder">Importar pasta</string>
+    <string name="export_notes">Export notes</string>
+    <string name="import_notes">Import notes</string>
     <!-- FAQ -->
     <string name="faq_1_title">Como mudar a cor do widget?</string>
     <string name="faq_1_text">Caso você possua apenas 1 widget ativo, você poderá recriá-lo, ou usar o botão nas configurações do aplicativo para personalizá-lo. Caso você possua vários widgets ativos, o botão nas configurações do aplicativo não estará disponível. Como o aplicativo suporta personalização de cores por widget, você terá que recriar o widget que deseja personalizar.</string>
