--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -67,7 +67,7 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Esporta le note come file</string>
     <string name="import_folder">Importa cartella</string>
-    <string name="export_notes">Export notes</string>
+    <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
     <!-- FAQ -->
     <string name="faq_1_title">Come posso cambiare il colore dei widget\?</string>
