--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -67,7 +67,7 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Export all notes as files</string>
     <string name="import_folder">Import folder</string>
-    <string name="export_notes">Export notes</string>
+    <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
     <!-- FAQ -->
     <string name="faq_1_title">How can I change the widgets color?</string>
