--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -67,7 +67,7 @@
     <!-- Import / Export -->    
     <string name="export_all_notes">Eksporter alle notater som filer</string>
     <string name="import_folder">Importer mappe</string>
-    <string name="export_notes">Export notes</string>
+    <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
     <!-- FAQ -->
     <string name="faq_1_title">Hvordan endrer jeg miniprogramsfargen\?</string>
