--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -68,7 +68,7 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como arquivo</string>
     <string name="import_folder">Importar pasta</string>
-    <string name="export_notes">Export notes</string>
+    <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
     <!-- FAQ -->
     <string name="faq_1_title">Como mudar a cor do widget?</string>
