--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -70,8 +70,8 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
     <string name="import_folder">Importovať priečinok</string>
-    <string name="export_notes">Export all notes</string>
-    <string name="import_notes">Import notes</string>
+    <string name="export_notes">Exportovať všetky poznámky</string>
+    <string name="import_notes">Importovať poznámky</string>
 
     <!-- FAQ -->
     <string name="faq_1_title">Ako viem zmeniť farby widgetu?</string>
